--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ clap = { version = "4.5.1", features = ["derive"] }
 csv = "1.3.0"
 exitcode = "1.1.2"
 indexmap = "2.2.3"
+indicatif = "0.17.9"
 log = "0.4.20"
 ndarray = "0.15.6"
 ndarray-ndimage = "0.4.0"
