--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ argmin-math = "0.4.0"
 argmin-observer-paramwriter = "0.1.0"
 argmin-observer-slog = "0.1.0"
 bio = "1.5.0"
+bitcode = "=0.6.3"
 clap = { version = "4.5.1", features = ["derive"] }
 csv = "1.3.0"
 exitcode = "1.1.2"
@@ -37,4 +38,5 @@ slog-async = "2.8.0"
 slog-scope = "4.4.0"
 slog-stdlog = "4.1.1"
 slog-term = "2.9.1"
+smallvec = "1.13.2"
 statrs = "0.17.1"
